# Poehub

./: .gitignore  00-START_HERE.md  BILINGUAL_HELP.md  CHANGELOG.md  CONVERSATION_GUIDE.md  FINAL_SUMMARY.md  GET_PATH.sh  INSTALLATION_CHECKLIST.md  LICENSE  MESSAGE_SPLITTING_INFO.md  QUICKSTART.md  README.md  SCRIPTS_REFERENCE.md  SYSTEM_PROMPTS_GUIDE.md  TESTING.md  TROUBLESHOOTING.md  VERSION_1.2.0_RELEASE_NOTES.md  __init__.py  api_client.py  bot_status.sh  conversation_manager.py  deploy_poe_bot.sh  deploy_poe_bot_on_arch.sh  encryption.py  fix_python_version.sh  install_service.sh  package-lock.json  poehub.py  pyproject.toml  requirements.txt  run_tests.sh  start_bot.sh  start_bot_screen.sh  stop_bot.sh  sync_to_red.sh  uninstall_service.sh  verify_installation.py
docs/: project_structure.md
src/poehub/: __init__.py  api_client.py  conversation_manager.py  encryption.py  i18n.py  info.json  models.py  poehub.py  pricing_crawler.py  pricing_oracle.py  prompt_utils.py  protocols.py
tests/: conftest.py  test_api_client.py  test_auto_clear.py  test_chat_scope.py  test_chat_service_update.py  test_conversation_manager.py  test_conversation_model_binding.py  test_encryption.py  test_i18n.py  test_model_search.py  test_music_service.py  test_poehub.py  test_poehub_extended.py  test_pricing_oracle.py  test_reminder_loop.py  test_summary_command.py  test_summary_integration.py  test_ui_conversation.py  test_ui_home.py  test_ui_summary.py  test_voice_commands.py  test_websearch_command.py
tests/core/: test_memory.py
tests/services/: test_billing.py  test_chat.py  (+5 more)
(+42 files in other folders)
